fixed google form alignment

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,6 +1,8 @@
 .contact-us{
     width: auto;
     display: flex;
+    align-items: center;
+    justify-content: center;
     margin-left: auto;
     margin-right: auto;
 }
